--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
   },
   "homepage": "https://github.com/e0ipso/plugnplay#readme",
   "scripts": {
-    "coverage": "istanbul check-coverage --statements 100 --lines 100 --branches 100 --functions 100 **/coverage.json",
-    "test": "npm run build && istanbul cover --print both nodeunit ./test",
-    "commitmsg": "validate-commit-msg",
+    "coverage": "./node_modules/.bin/istanbul check-coverage --statements 100 --lines 100 --branches 100 --functions 100 **/coverage.json",
+    "test": "npm run build && ./node_modules/.bin/istanbul cover --print both nodeunit ./test",
+    "commitmsg": "./node_modules/.bin/validate-commit-msg",
     "precommit": "npm run flow && npm run lint",
     "prepush": "npm test && npm run coverage",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "semantic-release": "./node_modules/.bin/semantic-release pre && npm publish && ./node_modules/.bin/semantic-release post",
     "postinstall": "npm run build",
-    "flow": "flow",
-    "build": "flow-remove-types src/ --out-dir lib/ && flow-copy-source src lib",
-    "lint": "eslint src",
-    "emdaer": "emdaer"
+    "flow": "./node_modules/.bin/flow",
+    "build": "./node_modules/.bin/flow-remove-types src/ --out-dir lib/ && flow-copy-source src lib",
+    "lint": "./node_modules/.bin/eslint src",
+    "emdaer": "./node_modules/.bin/emdaer"
   },
   "keywords": [
     "plugin",
