fix(Misc): Misc changes for badges and coveralls

--- a/.emdaer.yml
+++ b/.emdaer.yml
@@ -23,6 +23,9 @@
       - alt: 'NPM'
         image: 'npm/v/plugnplay.svg'
         link: 'http://npmjs.com/package/plugnplay'
+      - alt: 'Greenkeeper'
+        image: 'badge/Greenkeeper-enabled-brightgreen.svg'
+        link: 'https://greenkeeper.io/'
 - include: './docs/summary.md'
 - include: './docs/quick.md'
 - include: './docs/plugins.md'
