--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,18 @@ cache:
     - .tmp
 before_install:
   - git fetch origin --tags
+  - yarn global add greenkeeper-lockfile@1
+before_script:
+  - greenkeeper-lockfile-update
 script:
-  - npm test
+  - yarn test
+after_script:
+  - greenkeeper-lockfile-upload
 after_success:
   # Report coverage to coveralls.io
   - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
   - rm -rf ./coverage
-  - npm run semantic-release
+  - yarn run semantic-release
 
 branches:
   except:
