feat(Test): Increase test coverage to 100

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/e0ipso/plugnplay#readme",
   "scripts": {
-    "coverage": "istanbul check-coverage --statements 0 --lines 0 --branches 0 --functions 0 **/coverage.json",
+    "coverage": "istanbul check-coverage --statements 100 --lines 100 --branches 100 --functions 100 **/coverage.json",
     "test": "npm run build && istanbul cover --print both nodeunit ./test",
     "commitmsg": "validate-commit-msg",
     "precommit": "npm run flow && npm run lint",
@@ -63,6 +63,7 @@
     "glob": "^7.1.2",
     "js-yaml": "^3.10.0",
     "lodash": "^4.17.4",
-    "pify": "^3.0.0"
+    "pify": "^3.0.0",
+    "require-subvert": "^0.1.0"
   }
 }
