feat(Types): Add types for plugins as plugins

--- a/test/test_plugins/avocado/plugnplay.yml
+++ b/test/test_plugins/avocado/plugnplay.yml
@@ -2,6 +2,6 @@ id: avocado
 name: Avocado
 description: The main ingredient for guacamole.
 loader: loader.js
-type: mango
+type: fruit
 dependencies:
   - mango
