--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "validate-commit-msg": "^2.14.0"
   },
   "dependencies": {
+    "circular-json": "^0.5.1",
     "copy": "^0.3.1",
     "coveralls": "^3.0.0",
     "easy-factory": "^1.3.0",
@@ -64,6 +65,7 @@
     "glob": "^7.1.2",
     "js-yaml": "^3.10.0",
     "lodash": "^4.17.4",
+    "marked": "^0.3.9",
     "md5": "^2.2.1",
     "pify": "^3.0.0",
     "require-subvert": "^0.1.0"
