--- a/package.json
+++ b/package.json
@@ -40,22 +40,23 @@
     "polymorphism"
   ],
   "devDependencies": {
-    "babel-eslint": "^8.0.1",
+    "babel-eslint": "^8.1.2",
     "emdaer": "^0.3.3",
-    "eslint": "^4.9.0",
+    "eslint": "^4.14.0",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-flowtype": "^2.39.1",
+    "eslint-plugin-flowtype": "^2.40.1",
     "eslint-plugin-import": "^2.8.0",
     "flow-bin": "^0.62.0",
     "husky": "^0.14.3",
     "istanbul": "^0.4.5",
     "nodeunit": "^0.11.2",
-    "semantic-release": "^11.0.2",
+    "semantic-release": "^11.2.0",
     "semantic-release-conventional-commits": "^1.2.0",
-    "sinon": "^4.0.2",
+    "sinon": "^4.1.3",
     "validate-commit-msg": "^2.14.0"
   },
   "dependencies": {
+    "circular-json": "^0.5.1",
     "copy": "^0.3.1",
     "coveralls": "^3.0.0",
     "easy-factory": "^1.3.0",
@@ -64,6 +65,7 @@
     "glob": "^7.1.2",
     "js-yaml": "^3.10.0",
     "lodash": "^4.17.4",
+    "marked": "^0.3.9",
     "md5": "^2.2.1",
     "pify": "^3.0.0",
     "require-subvert": "^0.1.0"
