--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plugnplay",
-  "version": "0.0.0-development",
+  "version": "3.2.0",
   "description": "Plugin system for reusable code in node.js",
   "main": "index.js",
   "repository": {
