--- a/package.json
+++ b/package.json
@@ -40,31 +40,33 @@
     "polymorphism"
   ],
   "devDependencies": {
+    "@emdaer/cli": "^3.2.31",
+    "@emdaer/plugin-shields": "^3.2.31",
+    "@emdaer/plugin-value-from-package": "^3.2.31",
     "babel-eslint": "^9.0.0",
-    "emdaer": "^0.3.3",
     "eslint": "^6.5.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-import": "^2.8.0",
     "flow-bin": "^0.92.1",
-    "husky": "^1.0.0",
+    "husky": "^4.3.0",
     "istanbul": "^0.4.5",
-    "nodeunit": "^0.11.2",
-    "semantic-release": "^15.4.1",
+    "nodeunit": "^0.11.3",
+    "semantic-release": "^17.1.1",
     "semantic-release-conventional-commits": "^2.0.0",
     "sinon": "^6.0.1",
     "validate-commit-msg": "^2.14.0"
   },
   "dependencies": {
-    "circular-json": "^0.5.1",
     "copy": "^0.3.1",
     "easy-factory": "^1.3.0",
-    "flow-copy-source": "^2.0.0",
+    "flatted": "^3.0.5",
+    "flow-copy-source": "^2.0.9",
     "flow-remove-types": "^1.2.3",
     "glob": "^7.1.2",
-    "js-yaml": "^3.10.0",
-    "lodash": "^4.17.10",
-    "marked": "^0.6.0",
+    "js-yaml": "^3.14.0",
+    "lodash": "^4.17.20",
+    "marked": "^1.1.1",
     "md5": "^2.2.1",
     "pify": "^4.0.0",
     "require-subvert": "^0.1.0"
