--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
   "scripts": {
     "coverage": "istanbul check-coverage --statements 100 --lines 100 --branches 100 --functions 100 **/coverage.json",
     "test": "npm run build && istanbul cover --print both nodeunit ./test",
-    "commitmsg": "validate-commit-msg",
-    "precommit": "npm run flow && npm run lint",
-    "prepush": "npm test && npm run coverage",
     "semantic-release": "semantic-release",
     "postinstall": "npm run build",
     "flow": "flow",
@@ -73,5 +70,12 @@
   },
   "release": {
     "analyzeCommits": "semantic-release-conventional-commits"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "validate-commit-msg",
+      "pre-commit": "npm run flow && npm run lint",
+      "pre-push": "npm test && npm run coverage"
+    }
   }
 }
