--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "semantic-release": "semantic-release",
     "postinstall": "npm run build",
     "flow": "flow",
-    "build": "rm -fr lib; flow-remove-types --all src/ --out-dir lib/ && copy ./src/**/plugnplay.yml lib && flow-copy-source src lib",
+    "build": "rimraf lib && flow-remove-types --all src/ --out-dir lib/ && copy ./src/**/plugnplay.yml lib && flow-copy-source src lib",
     "lint": "eslint src",
     "emdaer": "emdaer"
   },
@@ -66,7 +66,8 @@
     "marked": "^1.1.1",
     "md5": "^2.2.1",
     "pify": "^4.0.0",
-    "require-subvert": "^0.1.0"
+    "require-subvert": "^0.1.0",
+    "rimraf": "^3.0.2"
   },
   "release": {
     "analyzeCommits": "semantic-release-conventional-commits"
