--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "coverage": "istanbul check-coverage --statements 100 --lines 100 --branches 100 --functions 100 **/coverage.json",
     "test": "npm run build && istanbul cover --print both nodeunit ./test",
     "semantic-release": "semantic-release",
-    "postinstall": "npm run build",
+    "prepare": "npm run build",
     "flow": "flow",
     "build": "rimraf lib && flow-remove-types --all src/ --out-dir lib/ && copy ./src/**/plugnplay.yml lib && flow-copy-source src lib",
     "lint": "eslint src",
