--- a/package.json
+++ b/package.json
@@ -23,37 +23,47 @@
   },
   "homepage": "https://github.com/e0ipso/plugnplay#readme",
   "scripts": {
-    "coverage": "istanbul check-coverage --statements 100 --lines 100 --branches 100 --functions 100 **/coverage.json",
-    "test": "npm run build && istanbul cover --print both nodeunit ./test",
-    "semantic-release": "semantic-release",
-    "prepare": "npm run build",
-    "postinstall": "npm run build",
+    "test": "npm run build && nodeunit ./test",
+    "commitlint": "commitlint",
     "flow": "flow",
     "build": "rimraf lib && flow-remove-types --all src/ --out-dir lib/ && copy ./src/**/plugnplay.yml lib && flow-copy-source src lib",
     "lint": "eslint src",
-    "emdaer": "emdaer"
+    "emdaer": "emdaer",
+    "lint:fix": "prettier --write \"./src/**/*.+(js|jsx|ts|tsx|json|md)\" && eslint --fix src",
+    "lint:ci": "npm run lint -o reports/eslint/issues.json -f json",
+    "lint-staged": "lint-staged"
   },
   "keywords": [
     "plugin",
     "polymorphism"
   ],
   "devDependencies": {
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
     "@emdaer/cli": "^3.2.31",
     "@emdaer/plugin-shields": "^3.2.31",
     "@emdaer/plugin-value-from-package": "^3.2.31",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.2.3",
+    "@semantic-release/npm": "^7.1.3",
+    "@semantic-release/release-notes-generator": "^9.0.3",
     "babel-eslint": "^9.0.0",
-    "eslint": "^6.5.0",
+    "conventional-changelog-conventionalcommits": "^4.6.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-flowtype": "^3.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-flowtype": "^3.13.0",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "flow-bin": "^0.92.1",
-    "husky": "^4.3.0",
-    "istanbul": "^0.4.5",
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.6",
     "nodeunit": "^0.11.3",
-    "semantic-release": "^17.1.1",
-    "semantic-release-conventional-commits": "^2.0.0",
-    "sinon": "^6.0.1",
-    "validate-commit-msg": "^2.14.0"
+    "prettier": "^2.4.1",
+    "semantic-release": "^18.0.0",
+    "sinon": "^6.0.1"
   },
   "dependencies": {
     "copy": "^0.3.1",
@@ -69,15 +79,5 @@
     "pify": "^4.0.0",
     "require-subvert": "^0.1.0",
     "rimraf": "^3.0.2"
-  },
-  "release": {
-    "analyzeCommits": "semantic-release-conventional-commits"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "validate-commit-msg",
-      "pre-commit": "npm run flow && npm run lint",
-      "pre-push": "npm test && npm run coverage"
-    }
   }
 }
